      (\PR{18390}, thanks to Martin Jakt).

      \item Non-finite objects of class \code{"POSIXlt"} are now
      correctly coerced to classes \code{"Date"} and \code{"POSIXct"};
      following up on the extension to \code{format()} them correctly.

      \item Added methods for \code{is.finite()}, \code{is.infinite()}
      and \code{is.nan()} for \code{"POSIXlt"} date-time objects.
    }
  }

  \subsection{BUG FIXES on Windows}{
    \itemize{
     \item Non-ASCII characters are now properly displayed on Windows
      in windows created using GraphApp via
      e.g.\sspace{}\code{winDialogString} thanks to a workaround for an
      at least surprising Windows behavior with UTF-8 as the system
      encoding (\PR{18382}).

      \item Find and replace operations work again in the script editor in
      \command{Rgui} on Windows.

      \item Computation of window size based on requested client size in
      GraphApp when running in a multi-byte locale on Windows has been fixed
      (regression in \R 4.2.0 for users of systems where \R 4.1 used a
      single-byte locale).  \command{Rgui} again respects the number of
      console rows and columns given in \file{Rconsole} file.

      \item \command{Rterm} support for \code{Alt+xxx} sequences has been
      fixed to produce the corresponding character (only) once. This fixes
      pasting text with tilde on Italian keyboard (PR#18391).
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New function \code{utils::findCRANmirror()} to find out if a
      \acronym{CRAN} mirror has been selected, otherwise fallback to
      the main site.  This behaves in the same way as
      \code{tools::CRAN_package_db()} and is intended for packages
      wishing to access \acronym{CRAN} for purposes other than
      installing packages.

      The need for this was shown by a day when the main \acronym{CRAN}